--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,37 @@ ion-icon {
 		display: none;
 		visibility: hidden;
 	}
+	.sidebar.toggled .sidebar-brand .sidebar-brand-icon .img-brand {
+		display: block;
+		visibility: visible;
+		opacity: 1;
+		overflow: visible;
+	}
+	.sidebar.toggled .sidebar-brand .sidebar-brand-text {
+		display: none;
+	}
+}
+.form-control-search {
+	color: var(--light);
+	background-color: var(--dark);
+	border: 1px solid var(--light);
+}
+.form-control-search:focus {
+	color: var(--light);
+	border: 1px solid var(--light);
+	background-color: var(--dark);
+	outline: none;
+	box-shadow: 0 0 0 0.25rem rgba(245, 246, 250, 0.25);
+}
+.btn-search {
+	color: var(--dark);
+	background-color: var(--light);
+}
+.btn-search:focus,
+.btn-search:active {
+	box-shadow: 0 0 0 0.25rem rgba(245, 246, 250, 0.25);
+	background-color: var(--light);
+	color: var(--dark);
 }
 #loader-wrapper {
 	position: fixed;
@@ -119,4 +150,11 @@ ion-icon {
 	opacity: 0;
 	visibility: hidden;
 }
-
+.bars {
+	color: var(--light);
+	border: 1px solid var(--light);
+}
+.bars:hover, .bars:active {
+	background: var(--light);
+	color: var(--dark);
+}
