--- a/css/style.css
+++ b/css/style.css
@@ -20,24 +20,6 @@ ion-icon {
 	object-fit: cover;
 	border: 2px solid #ddd;
 }
-@media screen and (min-width: 786px) {
-	.sidebar-brand-text {
-		font-size: 1rem;
-	}
-	.img-brand {
-		display: none;
-		visibility: hidden;
-	}
-	.sidebar.toggled .sidebar-brand .sidebar-brand-icon .img-brand {
-		display: block;
-		visibility: visible;
-		opacity: 1;
-		overflow: visible;
-	}
-	.sidebar.toggled .sidebar-brand .sidebar-brand-text {
-		display: none;
-	}
-}
 .form-control-search {
 	color: var(--light);
 	background-color: var(--dark);
@@ -157,4 +139,59 @@ ion-icon {
 .bars:hover, .bars:active {
 	background: var(--light);
 	color: var(--dark);
+}
+.collapse .collapse-inner {
+	overflow-y: scroll;
+	max-height: 230px;
+}
+.sidebar {
+	max-height: 100vh;
+}
+.text-heading {
+	font-size: 2rem;
+	background: rgb(90,92,105);
+	background: linear-gradient(180deg, rgba(90,92,105,1) 0%, rgba(205,206,205,1) 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	text-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+.text-heading + h3 {
+	font-size: calc(2rem / 2);
+	background: rgb(90,92,105);
+	background: linear-gradient(180deg, rgba(206, 205, 205,1) 0%, rgba(90, 92, 105,1) 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	text-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+}
+.img-profile {
+	border-radius: 50%;
+	transform: scale(1);
+	transition: transform 0.5s ease-in-out;
+}
+.img-profile:hover {
+	transform: scale(1.2);
+}
+@media screen and (min-width: 786px) {
+	.sidebar-brand-text {
+		font-size: 1rem;
+	}
+	.img-brand {
+		display: none;
+		visibility: hidden;
+	}
+	.sidebar.toggled .sidebar-brand .sidebar-brand-icon .img-brand {
+		display: block;
+		visibility: visible;
+		opacity: 1;
+		overflow: visible;
+	}
+	.sidebar.toggled .sidebar-brand .sidebar-brand-text {
+		display: none;
+	}
+	.text-heading {
+		font-size: 3rem;
+	}
+	.text-heading + h3 {
+		font-size: calc(3rem / 2);
+	}
 }
