--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -12,15 +12,60 @@
 		</ul>
 	</div>
 	<div class="row">
-		<div class="col-lg-3 col-md-7 mx-auto">
-			<div class="card border-top-primary shadow">
-				<div class="card-body">
-					<h1 class="text-gray-800 text-center text-heading">Welcome Back!</h1>
-					<h3 class="text-gray-800 text-center small">To Web Tools | BlackCoderCrush</h3>
-					<div class="row no-gutters">
-						<div class="jumbotron jumbotron-fluid">
-							<pre></pre>
-						</div>
+		<div class="col-md-10 mx-auto">
+			<div class="home">
+				<div class="home-brand">
+					<img class="home-brand-profile" src="img/logo.jpg" alt="Logo">
+				</div>
+				<div class="home-body">
+					<h3 class="home-body-title">BlackCoderCrush</h3>
+					<p class="home-body-slogan">Lets Play And Make A Change!</p>
+					<a class="home-body-link" href="#socialmedia">
+						Social Media
+					</a>
+					<div class="home-body-media" id="socialmedia">
+						<a class="home-body-media-link" href="https://instagram.com/blackcodercrush" target="_blank">
+							<ion-icon name="logo-instagram" class="fa-1x"></ion-icon>
+							<span>Instagram</span>
+						</a>
+						<a class="home-body-media-link" href="https://facebook.com/blackcodercrush" target="_blank">
+							<ion-icon name="logo-facebook" class="fa-1x"></ion-icon>
+							<span>Facebook</span>
+						</a>
+						<a class="home-body-media-link" href="https://www.youtube.com/channel/UCk-KwD5UouOkjhAvr2E-dPQ" target="_blank">
+							<ion-icon name="logo-youtube" class="fa-1x"></ion-icon>
+							<span>Youtube</span>
+						</a>
+						<a class="home-body-media-link" href="https://myblackcodercrush.blogspot.com/" target="_blank">
+							<i class="fab fa-blogger"></i>
+							<span>Blogspot</span>
+						</a>
+						<a class="home-body-media-link" href="https://github.com/blackcodercrush" target="_blank">
+							<ion-icon name="logo-github" class="fa-1x"></ion-icon>
+							<span>Github</span>
+						</a>
+					</div>
+					<hr class="home-body-divider">
+					<a class="home-body-link" href="#donate">
+						Donate
+					</a>
+					<div class="home-body-media" id="donate">
+						<a class="home-body-media-link" href="https://instagram.com/blackcodercrush" target="_blank">
+							<i class="fab fa-paypal"></i>
+							<span>PayPal</span>
+						</a>
+						<a class="home-body-media-link" href="https://facebook.com/blackcodercrush" target="_blank">
+							<ion-icon name="logo-facebook" class="fa-1x"></ion-icon>
+						</a>
+						<a class="home-body-media-link" href="https://www.youtube.com/channel/UCk-KwD5UouOkjhAvr2E-dPQ" target="_blank">
+							<ion-icon name="logo-youtube" class="fa-1x"></ion-icon>
+						</a>
+						<a class="home-body-media-link" href="https://myblackcodercrush.blogspot.com/" target="_blank">
+							<i class="fab fa-blogger"></i>
+						</a>
+						<a class="home-body-media-link" href="https://github.com/blackcodercrush" target="_blank">
+							<ion-icon name="logo-github" class="fa-1x"></ion-icon>
+						</a>
 					</div>
 				</div>
 			</div>
