--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<!-- Css -->
-	<link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css" type="text/css">
+	<link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
 	<link rel="stylesheet" href="css/sb-admin-2.min.css" type="text/css">
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<!-- Font -->
@@ -45,7 +45,6 @@
 	<script src="plugins/jquery/jquery.min.js"></script>
 	<script src="plugins/jquery-easing/jquery.easing.min.js"></script>
 	<script src="plugins/bootstrap/js/bootstrap.min.js"></script>
-	<script src="plugins/fontawesome-free/js/all.min.js"></script>
 	<script src="js/main.js"></script>
 	<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </body>
