--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -50,21 +50,21 @@
 						Donate
 					</a>
 					<div class="home-body-media" id="donate">
-						<a class="home-body-media-link" href="https://instagram.com/blackcodercrush" target="_blank">
-							<i class="fab fa-paypal"></i>
+						<a class="home-body-media-link" href="#" target="_blank">
+							<i class="fab fa-paypal fa-1x"></i>
 							<span>PayPal</span>
 						</a>
-						<a class="home-body-media-link" href="https://facebook.com/blackcodercrush" target="_blank">
-							<ion-icon name="logo-facebook" class="fa-1x"></ion-icon>
+						<a class="home-body-media-link" href="#" target="_blank">
+							<ion-icon src="icons/ovo.svg" class="fa-1x"></ion-icon>
+							<span>OVO</span>
 						</a>
-						<a class="home-body-media-link" href="https://www.youtube.com/channel/UCk-KwD5UouOkjhAvr2E-dPQ" target="_blank">
-							<ion-icon name="logo-youtube" class="fa-1x"></ion-icon>
+						<a class="home-body-media-link" href="#" target="_blank">
+							<ion-icon src="icons/gopay.svg" class="fa-1x"></ion-icon>
+							<span>Gopay</span>
 						</a>
-						<a class="home-body-media-link" href="https://myblackcodercrush.blogspot.com/" target="_blank">
-							<i class="fab fa-blogger"></i>
-						</a>
-						<a class="home-body-media-link" href="https://github.com/blackcodercrush" target="_blank">
-							<ion-icon name="logo-github" class="fa-1x"></ion-icon>
+						<a class="home-body-media-link" href="#" target="_blank">
+							<ion-icon src="icons/dana.svg" class="fa-1x"></ion-icon>
+							<span>Dana</span>
 						</a>
 					</div>
 				</div>
