--- a/templates/layout/_navbar.latte
+++ b/templates/layout/_navbar.latte
@@ -32,12 +32,12 @@
 		<div class="topbar-divider d-sm-block"></div>
 		<li class="nav-item dropdown no-arrow">
 			<a class="nav-link dropdown-toggle" data-toggle="dropdown">
-					<img src="assets/img/logo.jpg" alt="Logo" class="img-profile shadow">
+				<img src="{$tools ? '../'}assets/img/logo.jpg" alt="Logo" class="img-profile shadow">
 			</a>
 			<div class="dropdown-menu dropdown-menu-right shadow animated--fade-in">
 				<h5 class="dropdown-header">Social Media</h5>
 				<a class="dropdown-item" href="http://blackcodercrush.rf.gd" target="_blank">
-					<ion-icon src="icons/profileweb.svg" style="font-size: 20px"></ion-icon>
+					<ion-icon src="{$tools ?  '../'}assets/icons/profileweb.svg" style="font-size: 20px"></ion-icon>
 					<span>Website Profile</span>
 				</a>
 				<a class="dropdown-item" href="https://github.com/blackcodercrush" target="_blank">
