--- a/templates/layout/_sidebar.latte
+++ b/templates/layout/_sidebar.latte
@@ -2,11 +2,11 @@
 <ul id="accordinSidebar" class="toggled navbar-nav sidebar sidebar-dark accordin bg-gradient-dark">
 	<a class="sidebar-brand d-flex justify-content-center align-items-center" href="/">
 		<div class="sidebar-brand-icon">
-				<img class="img-circle img-brand" src="assets/img/logo.jpg" alt="Logo">
+				<img class="img-circle img-brand" src="{$tools ? '../'}assets/img/logo.jpg" alt="Logo">
 		</div>
 		<span class="sidebar-brand-text mx-3">BlackCoderCrush</span>
 	</a>
-	<hr class="sidebar-divider my-0">
+	<hr class="sidebar-divider my-0 mt-3">
 	<li class="nav-item active">
 		<a class="nav-link" href="/">
 			<i class="fa fa-home"></i>
@@ -22,23 +22,23 @@
 		<div id="collapseSosmed" class="collapse" data-parent="#accordinSidebar">
 			<div class="collapse-inner rounded py-2 bg-light">
 				<h5 class="collapse-header">Sosmed Tools</h5>
-				<a class="collapse-item" href="/tools/ytdown.php">
+				<a class="collapse-item" href="/tools/ytdown">
 					<i class="fab fa-youtube"></i>
 					<span>Youtube Downloader</span>
 				</a>
-				<a class="collapse-item" href="/tools/igdown.php">
+				<a class="collapse-item" href="/tools/igdown">
 					<i class="fab fa-instagram"></i>
 					<span>Instagram Downloader</span>
 				</a>
-				<a class="collapse-item" href="/tools/fbdown.php">
+				<a class="collapse-item" href="/tools/fbdown">
 					<i class="fab fa-facebook"></i>
 					<span>Facebook Downloader</span>
 				</a>
-				<a class="collapse-item" href="/tools/twitterdown.php">
+				<a class="collapse-item" href="/tools/twitterdown">
 					<i class="fab fa-twitter"></i>
 					<span>Twitter Downloader</span>
 				</a>
-				<a class="collapse-item" href="/tools/tiktokdown.php">
+				<a class="collapse-item" href="/tools/tiktokdown">
 					<i class="fas fa-music"></i>
 					<span>Tiktok Downloader</span>
 				</a>
@@ -54,23 +54,23 @@
 		<div id="collapseSEO" class="collapse" data-parent="#accordinSidebar">
 			<div class="collapse-inner rounded py-2 bg-light">
 				<h5 class="collapse-header">SEO Tools</h5>
-				<a href="/tools/frewproxy.php" class="collapse-item">
+				<a href="/tools/frewproxy" class="collapse-item">
 					<ion-icon name="shield-checkmark-outline"></ion-icon>
 					<span>Free Proxy</span>
 				</a>
-				<a href="/tools/whois.php" class="collapse-item">
+				<a href="/tools/whois" class="collapse-item">
 					<ion-icon name="globe-outline"></ion-icon>
 					<span>Whois Lookup</span>
 				</a>
-				<a href="/tools/reverseip.php" class="collapse-item">
+				<a href="/tools/reverseip" class="collapse-item">
 					<ion-icon name="arrow-redo-outline"></ion-icon>
 					<span>Reverse IP</span>
 				</a>
-				<a href="/tools/dns.php" class="collapse-item">
+				<a href="/tools/dns" class="collapse-item">
 					<ion-icon name="globe-outline"></ion-icon>
 					<span>DNS Lookup</span>
 				</a>
-				<a href="/tools/portscanner.php" class="collapse-item">
+				<a href="/tools/portscanner" class="collapse-item">
 					<ion-icon name="eye-outline"></ion-icon>
 					<span>Port Scanner</span>
 				</a>
@@ -86,11 +86,11 @@
 		<div id="collapseSpam" class="collapse" data-parent="#accordinSidebar">
 			<div class="collapse-inner rounded py-2 bg-light">
 				<h5 class="collapse-header">Spam Tools</h5>
-				<a href="/tools/spwhats.php" class="collapse-item">
+				<a href="/tools/spwhats" class="collapse-item">
 					<ion-icon name="logo-whatsapp"></ion-icon>
 					<span>Spam Whatsapp</span>
 				</a>
-				<a class="collapse-item" href="/tools/sms.php">
+				<a class="collapse-item" href="/tools/sms">
 					<i class="fas fa-sms"></i>
 					<span>Sms Gratis</span>
 				</a>
@@ -106,15 +106,15 @@
 		<div id="collapseCrypto" class="collapse" data-parent="#accordinSidebar">
 			<div class="collapse-inner rounded bg-light py-2">
 				<h5 class="collapse-header">Crypto Tools</h5>
-				<a class="collapse-item" href="/tools/base64.php">
+				<a class="collapse-item" href="/tools/base64">
 					<ion-icon name="finger-print-outline"></ion-icon>
 					<span>Base64 Tools</span>
 				</a>
-				<a class="collapse-item" href="/tools/md5.php">
+				<a class="collapse-item" href="/tools/md5">
 					<ion-icon name="key-outline"></ion-icon>
 					<span>MD5 Tools</span>
 				</a>
-				<a class="collapse-item" href="/tools/hash.php">
+				<a class="collapse-item" href="/tools/hash">
 					<ion-icon name="search-outline"></ion-icon>
 					<span>Hash identifier</span>
 				</a>
@@ -122,7 +122,7 @@
 					<i class="fa fa-lock"></i>
 					<span>PHP Encryption</span>
 				</a>
-				<a class="collapse-item" href="/tools/genhash.php">
+				<a class="collapse-item" href="/tools/genhash">
 					<ion-icon name="finger-print-outline"></ion-icon>
 					<span>Generate Hash</span>
 				</a>
@@ -138,20 +138,20 @@
 		<div id="collapseDefacer" class="collapse" data-parent="#accordinSidebar">
 			<div class="collapse-inner rounded bg-light pl-0">
 				<h5 class="collapse-header">Defacer Tools</h5>
-				<a class="collapse-item" href="/tools/csrf.php">
+				<a class="collapse-item" href="/tools/csrf">
 					<ion-icon name="bug-outline"></ion-icon>
 					<span>CSRF Online</span>
 				</a>
-				<a class="collapse-item" href="/tools/balibang.php">
-					<ion-icon src="assets/icons/inject.svg" style="transform: rotateY(180deg)"></ion-icon>
+				<a class="collapse-item" href="/tools/balibang">
+					<ion-icon src="{$tools ? '../' }assets/icons/inject.svg" style="transform: rotateY(180deg)"></ion-icon>
 					<span>Balibang Auto Sqli</span>
 				</a>
 				<a class="collapse-item" href="/tools/webdav.php">
-					<ion-icon src="assets/icons/webdav.svg"></ion-icon>
+					<ion-icon src="{$tools ? '../' }assets/icons/webdav.svg"></ion-icon>
 					<span>WebDav Deface</span>
 				</a>
 				<a class="collapse-item" href="/tools/drupal.php">
-					<ion-icon src="assets/icons/inject.svg"></ion-icon>
+					<ion-icon src="{$tools ? '../' }assets/icons/inject.svg"></ion-icon>
 					<span>Drupal Exploit</span>
 				</a>
 				<a class="collapse-item" href="/tools/hackbar.php">
@@ -159,7 +159,7 @@
 					<span>Hackbar</span>
 				</a>
 				<a class="collapse-item" href="/tools/lokoexpoit.php">
-					<ion-icon src="assets/icons/inject.svg"></ion-icon>
+					<ion-icon src="{$tools ? '../' }assets/icons/inject.svg"></ion-icon>
 					<span>Lokmed Auto Exploit</span>
 				</a>
 				<a class="collapse-item" href="/tools/wpbrute.php">
@@ -167,7 +167,7 @@
 					<span>WP BruteForce</span>
 				</a>
 				<a class="collapse-item" href="/tools/kcfinder.php">
-					<ion-icon src="assets/icons/inject.svg" style="transform: rotateY(180deg)"></ion-icon>
+					<ion-icon src="{$tools ? '../' }assets/icons/inject.svg" style="transform: rotateY(180deg)"></ion-icon>
 					<span>Kcfinder Exploiter</span>
 				</a>
 				<a class="collapse-item" href="/tools/adfin.php">
@@ -191,12 +191,18 @@
 					<span>Live Editor</span>
 				</a>
 				<a class="collapse-item" href="/tools/jso.php">
-					<ion-icon src="assets/icons/puzzle.svg"></ion-icon>
+					<ion-icon src="{$tools ? '../' }assets/icons/puzzle.svg"></ion-icon>
 					<span>JSO Creator</span>
 				</a>
 			</div>
 		</div>
 	</li>
 	<hr class="sidebar-divider my-0">
+	<li class="nav-item">
+		<a class="nav-link collapsed" href="/about" data-parent="#accordinSidebar">
+			<ion-icon  class="fa-1x" name="information-circle-outline"></ion-icon>
+			<span>About</span>
+		</a>
+	</li>
 </ul>
 <!-- // Sidebar Close-->
