--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,12 @@ ion-icon {
 	box-shadow: -1px 1px 5px 0.1rem rgba(0, 0, 0, 0.4), 1px -1px 5px 0.1rem rgba(0, 0, 0, 0.4);
 	word-wrap: break-word;
 }
+.home .home-header,
+.home .home-header  ion-icon {
+	font-size: 2rem;
+	font-family: 'Quicksand', sans-serif;
+	font-weight: bold;
+}
 .home .home-brand {
 	position: relative;
 	max-width: 100%;
@@ -230,7 +236,7 @@ ion-icon {
 	width: 100%;
 	align-items: stretch;
 }
-.home .home-body .home-body-media .home-body-media-link {
+.home .home-body .home-body-media .home-body-media-link{
 	color: #34495e;
 	font-weight: bold;
 	font-size: 1.5rem;
@@ -243,6 +249,9 @@ ion-icon {
 	justify-content: center;
 	align-items: center;
 	margin-bottom: 3px;
+}
+a.fab {
+	text-decoration: none;
 }
 .home .home-body .home-body-media .home-body-media-link:hover {
 	color: #3498db;
@@ -258,7 +267,7 @@ ion-icon {
 .home .home-body .home-body-link {
 	position: relative;
 	font-size: 1.5rem;
-	font-weight: 600;
+	font-weight: 500;
 	text-transform: capitalize;
 	margin: 0 1rem 1rem;
 	padding: 0 1rem 0;
