--- a/templates/index.latte
+++ b/templates/index.latte
@@ -4,13 +4,7 @@
 {/block}
 {block content}
 <div class="container-fluid">
-	<div class="d-flex justify-content-between align-items-center mb-4">
-		<h1 class="h3 text-gray-700 mb-0 text-center">Dashboard Tools</h1>
-		<ul class="breadcrumb d-none d-md-flex">
-			<li class="breadcrumb-item"><a class="breadcrumb-link" href="/">Home</a></li>
-			<li class="breadcrumb-item active">Dashboard</li>
-		</ul>
-	</div>
+	<h1 class="mb-4">Home Menu</h1>
 	<div class="row">
 		<div class="col-md-10 mx-auto">
 			<div class="home">
