--- a/templates/tools/ytdown.latte
+++ b/templates/tools/ytdown.latte
@@ -6,7 +6,7 @@
 
 {block content}
 <div class="container-fluid">
-	<h1 class="h3 text-gray-700 mb-0 text-center">Youtube Tools</h1>
+	<h1 class="mb-4">Youtube Tools</h1>
 	<div class="row">
 		<div class="col-md-8 mx-auto col-sm-12">
 			<div class="card shadow border-left-primary">
@@ -28,11 +28,11 @@
 							<form action="" method="post" id="ytform" class="needs-validation mt-3">
 								<div class="form-group">
 									<label for="urlyt">URL Youtube</label>
-									<input id="urlyt" class="form-control form-control-dark" type="url" name="urlyt" placeholder="URL Yotube.." required>
+									<input id="urlyt" class="form-control" type="url" name="urlyt" placeholder="URL Youtube.." required>
 								</div>
 								<div class="form-group">
 									<label for="type">Convert To</label>
-									<select id="type" class="form-control form-control-dark" name="type" required>
+									<select id="type" class="form-control" name="type" required>
 										<option selected value="">-- Choose --</option>
 										<option value="mp3">MP3</option>
 										<option value="mp4">MP4</option>
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 		<div class="col-md-8 mx-auto col-sm-12 mt-5 mb-3">
-			<div class="card shadow border border-left-info">
+			<div class="card shadow border-left-info">
 				<div class="card-header">
 					<h2 class="card-title"><i class="fa text-info fa-info-circle"></i> Info</h2>
 				</div>
