--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -76,11 +76,69 @@ ion-icon {
 	color: #f1f2f6;
 	border-bottom-color: #60a3bc;
 }
+#wrapper.dark label {
+	color: rgba(245, 245, 245, 0.8);
+}
 #wrapper.dark .form-control {
 	background: #213040;
-	border-color: #4a69bd;
 	color: #f1f2f6;
+	border-color: #6b6d7d;
+}
+#wrapper.dark .form-control:focus {
+	border-color: #4e73df;
+	box-shadow: 0 0 0 0.25rem rgba(46, 89, 217, 0.25);
+}
+#wrapper.dark .form-control.is-invalid {
+	border-color: #ff5e57;
+	padding-right: calc(1.6em + 0.85rem);
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23ff5e57' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23ff5e57' stroke='none'/%3e%3c/svg%3e");
+	background-repeat: no-repeat;
+	background-position: right calc(0.375em + 0.1880rem) center;
+	background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+#wrapper.dark .form-control.is-invalid:focus {
+	border-color: rgba(255, 63, 52, 1.0);
+	box-shadow: 0 0 0 0.25rem rgba(255, 63, 52, 0.26);
+}
+#wrapper.dark .form-control.is-valid {
+	border-color: #0be881;
+	padding-right: calc(1.6em + 0.85rem);
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%231cc88a' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-44.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+	background-repeat: no-repeat;
+	background-position: right calc(0.375em + 0.1880rem) center;
+	background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+#wrapper.dark .form-control.is-valid:focus {
+	border-color: #0be881;
+	box-shadow: 0 0 0 0.25rem rgba(5, 196, 107, 0.25)
 }
 #wrapper.dark .form-control::placeholder {
 	color: rgba(255, 255, 255, 0.5);
+}
+#wrapper.dark .custom-select {
+	color: #f1f2f6;
+	border-color: #6b6d7d;
+	background: #213040 url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23f1f2f6' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px;
+}
+#wrapper.dark .custom-select:focus {
+	border-color: #4e73df;
+	box-shadow: 0 0 0 0.25rem rgba(46, 89, 217, 0.25);
+}
+#wrapper.dark .custom-select.is-invalid {
+	border-color: #ff5e57;
+	padding-right: calc(0.75em + 2.3125rem);
+	background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23f1f2f6' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23ff3f34' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23ff5e57' stroke='none'/%3e%3c/svg%3e") #213040 no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+#wrapper.dark .custom-select.is-invalid:focus {
+	border-color: #ff5e57;
+	box-shadow: 0 0 0 0.25rem rgba(255, 63, 52, 0.25);
+}
+#wrapper.dark .custom-select.is-valid {
+	border-color: #0be881;
+	padding-right: calc(0.75em + 2.3125rem);
+	background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23f1f2f6' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%230be881' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") #213040 no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+}
+#wrapper.dark .custom-select.is-valid:focus {
+	border-color: #0be881;
+	box-shadow: 0 0 0 0.25rem rgba(5, 196, 107, 0.25)
 }
