--- a/assets/css/sb-admin-2.css
+++ b/assets/css/sb-admin-2.css
@@ -1892,6 +1892,7 @@ pre code {
   border-color: #bac8f3;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 0.25);
+  /* rgba(186, 200, 243, 0.25) */
 }
 
 .form-control::-webkit-input-placeholder {
