--- a/templates/tools/ytdown.latte
+++ b/templates/tools/ytdown.latte
@@ -32,7 +32,7 @@
 								</div>
 								<div class="form-group">
 									<label for="type">Convert To</label>
-									<select id="typeyt" class="form-control" name="typeyt" required>
+									<select id="typeyt" class="custom-select" name="typeyt" required>
 										<option selected value="">-- Choose --</option>
 										<option value="mp3">MP3</option>
 										<option value="mp4">MP4</option>
