--- a/templates/index.latte
+++ b/templates/index.latte
@@ -4,62 +4,95 @@
 {/block}
 {block content}
 <div class="container-fluid">
-	<h1 class="mb-4">Home Menu</h1>
 	<div class="row">
-		<div class="col-md-10 mx-auto">
-			<div class="home">
-				<div class="home-brand">
-					<img class="home-brand-profile" src="assets/img/logo.jpg" alt="Logo">
+		<div class="col-md-12 mx-auto">
+			<div class="home mb-4">
+				<div class="home-header">
+					<h1 class="mb-4 home-heading text-center">Welcome To Web Tools BCC</h1>
 				</div>
-				<div class="home-body">
-					<h3 class="home-body-title">BlackCoderCrush</h3>
-					<p class="home-body-slogan">Lets Play And Make A Change!</p>
-					<a class="home-body-link" href="#socialmedia">
-						Social Media
-					</a>
-					<div class="home-body-media" id="socialmedia">
-						<a class="home-body-media-link" href="https://instagram.com/blackcodercrush" target="_blank">
-							<ion-icon name="logo-instagram" class="fa-1x"></ion-icon>
-							<span>Instagram</span>
-						</a>
-						<a class="home-body-media-link" href="https://facebook.com/blackcodercrush" target="_blank">
-							<ion-icon name="logo-facebook" class="fa-1x"></ion-icon>
-							<span>Facebook</span>
-						</a>
-						<a class="home-body-media-link" href="https://www.youtube.com/channel/UCk-KwD5UouOkjhAvr2E-dPQ" target="_blank">
-							<ion-icon name="logo-youtube" class="fa-1x"></ion-icon>
-							<span>Youtube</span>
-						</a>
-						<a class="home-body-media-link" href="https://myblackcodercrush.blogspot.com/" target="_blank">
-							<i class="fab fa-blogger"></i>
-							<span>Blogspot</span>
-						</a>
-						<a class="home-body-media-link" href="https://github.com/blackcodercrush" target="_blank">
-							<ion-icon name="logo-github" class="fa-1x"></ion-icon>
-							<span>Github</span>
-						</a>
+				<div class="home-content">
+					<div class="home-brand">
+						<img class="home-brand-profile" src="assets/img/logo.jpg" alt="Logo">
 					</div>
-					<hr class="home-body-divider">
-					<a class="home-body-link" href="#donate">
-						Donate
-					</a>
-					<div class="home-body-media" id="donate">
-						<a class="home-body-media-link" href="#" target="_blank">
-							<i class="fab fa-paypal fa-1x"></i>
-							<span>PayPal</span>
+					<h3 class="home-content-title">BlackCoderCrush</h3>
+					<p class="home-content-slogan">Lets Play And Make A Change!</p>
+					<hr class="home-divider">
+					<div class="home-body">
+						<a class="home-body-link" href="#socialmedia">
+							Social Media
 						</a>
-						<a class="home-body-media-link" href="#" target="_blank">
-							<ion-icon src="assets/icons/ovo2.svg" class="fa-1x"></ion-icon>
-							<span>OVO</span>
+						<ul class="home-list" id="socialmedia">
+							<li class="home-list-item">
+								<a class="home-list-item-link" href="https://instagram.com/blackcodercrush" target="_blank">
+									<ion-icon name="logo-instagram" class="fa-1x"></ion-icon>
+									<span>Instagram</span>
+								</a>
+							</li>
+							<li class="home-list-item">
+								<a class="home-list-item-link" href="https://facebook.com/blackcodercrush" target="_blank">
+									<ion-icon name="logo-facebook" class="fa-1x"></ion-icon>
+									<span>Facebook</span>
+								</a>
+							</li>
+							<li class="home-list-item">
+								<a class="home-list-item-link" href="https://www.youtube.com/channel/UCk-KwD5UouOkjhAvr2E-dPQ" target="_blank">
+									<ion-icon name="logo-youtube" class="fa-1x"></ion-icon>
+									<span>Youtube</span>
+								</a>
+							</li>
+							<li class="home-list-item">
+								<a class="home-list-item-link" href="https://myblackcodercrush.blogspot.com/" target="_blank">
+									<i class="fab fa-blogger"></i>
+									<span>Blogspot</span>
+								</a>
+							</li>
+							<li class="home-list-item">
+								<a class="home-list-item-link" href="https://github.com/blackcodercrush" target="_blank">
+									<ion-icon name="logo-github" class="fa-1x"></ion-icon>
+									<span>Github</span>
+								</a>
+							</li>
+						</ul>
+						<hr class="home-divider">
+						<a class="home-body-link" href="#donasi">
+							Donasi
 						</a>
-						<a class="home-body-media-link" href="#" target="_blank">
-							<ion-icon src="assets/icons/gopay.svg" class="fa-1x"></ion-icon>
-							<span>Gopay</span>
-						</a>
-						<a class="home-body-media-link" href="#" target="_blank">
-							<ion-icon src="assets/icons/dana.svg" class="fa-1x"></ion-icon>
-							<span>Dana</span>
-						</a>
+						<ul class="home-list" id="donasi">
+							<li class="home-list-item">
+								<a class="home-list-item-link" href="" target="_blank">
+									<ion-icon src="{$tools ? '../'}assets/icons/gopay.svg"></ion-icon>
+									<span>Gopay</span>
+								</a>
+							</li>
+							<li class="home-list-item">
+								<a class="home-list-item-link" href="" target="_blank">
+									<i class="fab fa-paypal"></i>
+									<span>Paypal</span>
+								</a>
+							</li>
+							<li class="home-list-item">
+								<a class="home-list-item-link" href="" target="_blank">
+									<ion-icon src="{$tools ? '../'}assets/icons/dana.svg"></ion-icon>
+									<span>Dana</span>
+								</a>
+							</li>
+							<li class="home-list-item">
+								<a class="home-list-item-link" href="" target="_blank">
+									<ion-icon src="{$tools ? '../'}assets/icons/ovo.svg"></ion-icon>
+									<span>OVO</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="home">
+				<div class="home-header">
+					<h6 class="home-heading"><i class="fa fa-info-circle text-info"></i> About</h6>
+				</div>
+				<div class="home-content">
+					<div class="home-body">
+						<p>Web Tools adalah sebuah website yang menyedia berbagai tools - tools yang mungkin bisa anda manfaat kan untuk perkerjaan anda atau untuk hal yang lain nya</p>
 					</div>
 				</div>
 			</div>
