--- a/templates/index.latte
+++ b/templates/index.latte
@@ -98,5 +98,13 @@
 			</div>
 		</div>
 	</div>
+	<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7230247&style=0001&nbdigits=6&type=ip&initCount=0" title="User Stats" Alt="PHP Hits Count"   border="0" >
+</a>                                    
+                                    
+                                        
+                                          
+                            
 </div>
 {/block}
